Fix Scrollbar in main page

--- a/nginx/frontend/src/app/components/home-page/main-welcome-section/main-welcome-section.component.scss
+++ b/nginx/frontend/src/app/components/home-page/main-welcome-section/main-welcome-section.component.scss
@@ -82,6 +82,11 @@
   overflow-y: scroll;
 }
 
+.message-container::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar space */
+  background: transparent; /* Optional: Hide scrollbar track */
+}
+
 .message {
   max-width: 70%;
   word-wrap: break-word;
